descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-12-XX  Release 7.18.2                                     ---
----------------------------------------------------------------------

* 'attr show' command displays attributes sorted by name - Tom Browder
* fixed ted command to work using new editor support - Cliff Yapp
* fixed mged text editor invocation bug when editor wasn't installed
	- Sean Morrison, Daniel Roßberg, Cliff Yapp
* support for comment lines at beginning of .asc files - John Anderson
* disabled adrt_master and adrt_slave tools - Erik Greenwald
* ported pixblend image processing tool to Windows - Erik Greenwald
* upgraded libpng to version 1.4.5 - Cliff Yapp
* upgraded zlib to version 1.2.5 - Cliff Yapp
* removed shell execution ! command from vdeck - Cliff Yapp

----------------------------------------------------------------------
--- 2010-12-07  Release 7.18.0                                     ---
----------------------------------------------------------------------

This release includes the initial release of a new Bag of Triangle
(BoT) editing interface for MGED and Archer.  Nicholas Reed developed
the new graphical user interface (GUI) in order to consolidate the
numerous BoT editing commands and processing steps into one unified
easy-to-use interface.  The new GUI grealy simplifies BoT processing
steps and can save modelers considerable time.

* ported benchmark suite to Windows (requires 'sh') - Erik Greenwald
* improved NURBS wireframes with interior surface lines - Keith Bowman
* additional NURBS raytracing robustness improvements - Keith Bowman
* removed pl-sgi plot tool - Sean Morrison
* expanded rtarea documentation with examples and detail - Cliff Yapp
* improved support for unlimited object counts in mged - Sean Morrison