@@ -180,7 +180,7 @@ For each source file in BRL-CAD, the following checklist applies:
   scope and passing as parameters or embedding them in structures as
   data.
 
-In addtion, don't be afraid to rewrite code or throw away code that
+In addition, don't be afraid to rewrite code or throw away code that
 "smells bad".  No code is sacred.  Perfection is achieved not when
 there is nothing more to add but, rather, when there is nothing more
 to take away.
@@ -421,7 +421,7 @@ migrated to build system declarations, preprocessor defines, or being
 removed outright.  It's okay to make modifications that assume
 compiler conformance with the ANSI C standard (c89).
 
-There currently no C++ interface to the core BRL-CAD libraries.  There
+There is currently no C++ interface to the core BRL-CAD libraries.  There
 are a few tools and enhancements to libraries that are implemented in
 C++ (the new BREP object type in librt, for example), but there are
 presently no C++ bindings available beyond experimental developments.
