@@ -44,6 +44,11 @@ THESE TASKS SHOULD HAPPEN WITHIN TWO RELEASE ITERATIONS
 THESE ARE UNSCHEDULED BACKLOG TASKS
 -----------------------------------
 
+* bu_basename() says it'll return things that it probably won't
+  return.  like /path/to/file/ should return file and //// returning /
+  instead of empty.  probably should portably handle path separators
+  too, otherwise it's kind of meaningless in bu.
+
 * add distribution test for making sure the source code conventions
   for function replacements are being respected (e.g., bu_strcmp()
   instead of strcmp()).
