@@ -172,7 +172,7 @@ main(int argc, char **argv)
     init_buffer(scanlen);
 
     /* Check for silly buffer syndrome */
-    if ((size_t)abs((int)(ury - uly)) > buflines/2 || (size_t)abs((int)(lry - lly)) > buflines/2) {
+    if ((unsigned)abs((int)(ury - uly)) > buflines/2 || (unsigned)abs((int)(lry - lly)) > buflines/2) {
 	fprintf(stderr, "bwcrop: Warning: You are skewing enough in the y direction\n");
 	fprintf(stderr, "bwcrop: relative to my buffer size that I will exhibit silly\n");
 	fprintf(stderr, "bwcrop: buffer syndrome (two replacements per scanline).\n");
